# morse

./: .gitignore  Cargo.toml  README.md  config.toml
other/: config.toml  generate_config.py  reference.py
src/: main.rs
src/morse/: mod.rs
