[package]
name = "morse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.6"
enigo = { version = "0.1.2", features = ["with_serde"] }
windows = { version = "0.48", features = ["Win32_UI_Input_KeyboardAndMouse"] }
